# vade-evan-cl

./: .gitlab-ci.yml  Cargo.toml  README.md  VERSIONS.md
src/: lib.rs  vade_evan.rs  vade_evan_cl.rs
src/application/: datatypes.rs  issuer.rs  mod.rs  prover.rs  verifier.rs
src/crypto/: crypto_datatypes.rs  crypto_issuer.rs  crypto_utils.rs  crypto_verifier.rs
src/utils/: mod.rs
tests/: crypto_issuer.rs  crypto_utils.rs  issuer.rs  prover.rs  vade_evan.rs  vade_evan_cl.rs
typings/: external.d.ts  index.d.ts  package.json  tsconfig.json  vade_evan_cl.d.ts
typings/application/: datatypes.d.ts
typings/crypto/: crypto_datatypes.d.ts
utilities/src/: lib.rs  test_data.rs
