[package]
name = "vade-evan-cl"
version = "0.0.1"
authors = ["evan GmbH"]
edition = "2018"
license = "Apache-2.0"
license-file = "LICENSE.txt"
description = "zero-knowledge-proof VC and TnT DID handling for vade"
homepage = "https://github.com/evannetwork/vade-evan-cl"
documentation = "https://docs.rs/crate/vade-evan-cl"
repository = "https://github.com/evannetwork/vade-evan-cl"
readme = "README.md"
keywords = ["ssi", "vc", "zkp"]

[lib]
name = "vade_evan_cl"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[features]
# default feature set
default = ["portable"]

# default ursa setup
portable = [
    # "ursa/portable",
    "ursa/portable_native",
]

# build to run as wasm file; not compatible with `native` feature
wasm = [
    "ursa/portable_wasm",
]

[dependencies]
async-trait = "0.1.31"
data-encoding = { version = "2.2.0" }
env_logger = "0.7.1"
hex = "0.4.2"
libsecp256k1 = "0.3.5"
log = "0.4.8"
rand = "0.7.3"
reqwest = { version = "0.10.4", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.53", features = ["preserve_order", "raw_value"] }
sha2 = "0.8.1"
sha3 = "0.8.2"
tokio = { version = "0.2.22" }
# ursa = { version = "0.3.5",  default-features = false }
# ursa = { path = "./../ursa/libursa", default-features = false }
ursa = { git = "https://github.com/evannetwork/ursa", branch = "portable-native",  default-features = false }
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
vade = "0.0.8"
# vade = { path = "../vade" }
# vade = { git = "https://github.com/evannetwork/vade", branch = "develop" }
# vade_evan_substrate = "0.0.1"
vade-evan-substrate = { path = "../vade-evan-substrate" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4.11",  default-features = false, features=["wasm-bindgen", "clock", "js-sys"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = { version = "0.2", features = ["color"] }
js-sys = { version = "0.3" }
serde_derive = "1.0.114"
wasm-bindgen = { version = "0.2",features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.5"
wasm-timer = { version = "0.2.4" }

[dev-dependencies]
regex = { version = "1.3.7" }
tokio = { version = "0.2.21", features = ["macros", "rt-threaded"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.12"
